refactor: userRepository store List-> Map으로 변경
- UserRepository store를 List -> TreeMap으로 변경
- User Profile을 보여주기 위한 정보를 ProfileViewDTO를 통해 표현
- User를 식별하기 위한 기본키인 id를 추가