@@ -4,32 +4,29 @@ import com.kakao.cafe.user.domain.User;
 import com.kakao.cafe.user.dto.SignUpDTO;
 import org.springframework.stereotype.Repository;
 
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.List;
-import java.util.Optional;
+import java.util.*;
 
 @Repository
 public class UserMemoryRepository implements UserRepository {
 
-    private static List<User> userList = new ArrayList<>();
+    private static Map<Long, User> userMap = new TreeMap<>();
 
     @Override
     public User save(SignUpDTO signUpDTO) {
-        User user = new User(userList.size() + 1, signUpDTO);
-        userList.add(user);
+        User user = new User(userMap.size() + 1L, signUpDTO);
+        userMap.put(userMap.size() + 1L, user);
         return user;
     }
 
     @Override
     public Optional<User> findByUserId(String userId) {
-        return userList.stream()
+        return userMap.values().stream()
                 .filter(user -> userId.equals(user.getUserId()))
                 .findFirst();
     }
 
     @Override
     public List<User> findAll() {
-        return Collections.unmodifiableList(userList);
+        return List.copyOf(userMap.values());
     }
 }
